--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <meta property="og:title" content="مواقيت الصلاة في مصر | Prayer Times Egypt">
     <meta property="og:description" content="اعرف مواقيت الصلاة في جميع المحافظات المصرية بسهولة ودقة.">
-    <meta property="og:image" content="https://yourdomain.com/mosque_.png">
+    <meta property="og:image" content="https://Zeyad Khalil.com/mosque_.png">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://yourdomain.com/">
 
